--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Bullseye</string>
+    <string name="instruction_text">PUT THE BULLSEYE AS CLOSE AS YOU CAN</string>
+    <string name="target_vaue">89</string>
+    <string name="min_value">1</string>
+    <string name="max_value">100</string>
+    <string name="text_button">Hit Me</string>
 </resources>
