--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="min_value">1</string>
     <string name="max_value">100</string>
     <string name="text_button">Hit Me</string>
+    <string name="button_dialog_text">Awesome!</string>
+    <string name="dialog_title">Hello there!</string>
+    <string name="dialog_text">This is my first pop up</string>
 </resources>
