--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="info">Info</string>
     <string name="round">Round</string>
     <string name="score">Score</string>
+    <string name="alert_title_1">Perfect!</string>
+    <string name="alert_title_2">You almost had it!</string>
+    <string name="alert_title_3">Not bad.</string>
+    <string name="alert_title_4">Are you even trying?</string>
 </resources>
